# efi_tables

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/efi/: function.h  interpolate.h  ratio_helper.h  table.h  table2d.h  table_bin_array.h
lib/include/efi/sensor/: converter_sensor.h  function_pointer_sensor.h  redundant_sensor.h  sensor.h  sensor_reader.h  sensor_type.h  stored_value_sensor.h
lib/include/efi/table/: table.h  table2d.h  table3d.h  table_bin.h  table_bin_array.h
lib/src/: redundant_sensor.cpp  sensor.cpp
test/: CMakeLists.txt  TestConverterSensor.cpp  TestFunctionPointerSensor.cpp  TestInterpolate.cpp  TestRedundantSensor.cpp  TestSensorBasic.cpp  TestSensorMock.cpp  TestSensorReader.cpp  TestTable2d.cpp  TestTable2dRatio.cpp  TestTableBins.cpp
test/mock/: mock_sensor.h
